--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/core": "^9.4.2",
+    "@react-spring/three": "^9.4.2",
+    "@react-three/cannon": "^4.6.1",
+    "@react-three/drei": "^8.8.1",
     "@react-three/fiber": "^7.0.24",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -11,12 +15,18 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "chart.js": "^3.7.0",
+    "immer": "^9.0.12",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.4.2",
     "three": "^0.136.0",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.3"
+    "uuid": "^8.3.2",
+    "web-vitals": "^2.1.3",
+    "zustand": "^3.6.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +54,7 @@
   },
   "devDependencies": {
     "@types/three": "^0.137.0",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint-config-airbnb": "^19.0.1",
